Fixed page background color not showing properly when scrolling

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,8 @@ html {
 }
 body {
   height: 100%;
-  margin: 0
+  margin: 0;
+  background-color: #2b3e50;
 }
 
 #root {
